--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -2,7 +2,7 @@
 layout: page
 title: Contact
 permalink: /contact/
-image: '/images/08.jpg'
+image: '/images/contact.jpg'
 ---
 
 <div class="form-box">
