--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -11,6 +11,8 @@ image: '/images/contact.jpg'
       <p class="page-description">{{site.data.settings.contact.description}}</p>
     {% endif %}
   </div>
+  
+  {% comment %} 
   <form class="form" action="{% if site.data.settings.contact.email %}https://formspree.io/f/{{site.data.settings.contact.email}}{% else %}#{% endif %}" method="POST">
     <div class="form__group">
       <label class="form__label screen-reader-text" for="form-name">Your Name</label>
@@ -28,4 +30,5 @@ image: '/images/contact.jpg'
       <button class="button" type="submit">Send Message</button>
     </div>
   </form>
+  {% endcomment %} 
 </div>
